--- a/WolvenKit/Views/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Tools/ImportExportView.xaml
@@ -73,6 +73,7 @@
             <syncfusion:SfDataGrid
                 x:Name="ConvertGrid"
                 Grid.Row="1"
+                BorderThickness="0,1,0,1"
                 AllowEditing="True"
                 AllowFiltering="True"
                 CellDoubleTapped="SfDataGrid_CellDoubleTapped"
@@ -87,6 +88,7 @@
                     <syncfusion:GridCheckBoxColumn
                         AllowEditing="True"
                         HeaderText="#"
+                        Width="50"
                         MappingName="IsChecked">
                         <syncfusion:GridCheckBoxColumn.HeaderTemplate>
                             <DataTemplate>
@@ -119,6 +121,7 @@
             <syncfusion:SfDataGrid
                 x:Name="ExportGrid"
                 Grid.Row="1"
+                BorderThickness="0,1,0,1"
                 AllowEditing="True"
                 AllowFiltering="True"
                 AllowResizingColumns="True"
@@ -130,8 +133,11 @@
                 Visibility="{Binding IsExportsSelected, Converter={StaticResource boolToVisibilityConverter}}">
 
                 <syncfusion:SfDataGrid.Columns>
-                    
-                    <syncfusion:GridCheckBoxColumn HeaderText="#" MappingName="IsChecked">
+
+                    <syncfusion:GridCheckBoxColumn
+                        HeaderText="#"
+                        MappingName="IsChecked"
+                        Width="50">
                         <syncfusion:GridCheckBoxColumn.HeaderTemplate>
                             <DataTemplate>
                                 <CheckBox
@@ -168,6 +174,7 @@
             <syncfusion:SfDataGrid
                 x:Name="ImportGrid"
                 Grid.Row="1"
+                BorderThickness="0,1,0,1"
                 AllowEditing="True"
                 AllowFiltering="True"
                 AllowResizingColumns="True"
@@ -182,6 +189,7 @@
                     <syncfusion:GridCheckBoxColumn
                         AllowEditing="True"
                         HeaderText="#"
+                        Width="50"
                         MappingName="IsChecked">
                         <syncfusion:GridCheckBoxColumn.HeaderTemplate>
                             <DataTemplate>
