--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -1188,6 +1188,26 @@
                                 </syncfusion:RibbonButton.IconTemplate>
                             </syncfusion:RibbonButton>
 
+                            <!--  Pack Install Button  -->
+                            <syncfusion:RibbonButton
+                            x:Name="AppMenuPackInstallButton"
+                            IconStretch="Fill"
+                            IconType="Icon"
+                            Label="Pack &amp; Install Project"
+                            SizeForm="Small">
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                    Width="auto"
+                                    Height="auto"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Stretch"
+                                    Foreground="Green"
+                                    Kind="SettingsGear" />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+
                             <!--  Publish Project Button  -->
                             <!--<syncfusion:RibbonButton
                             Command="{catel:CommandManagerBinding Application.PublishProject}"
@@ -1286,6 +1306,26 @@
                                 </syncfusion:RibbonButton.IconTemplate>
                             </syncfusion:RibbonButton>
 
+                            <!--  Save As Button  -->
+                            <syncfusion:RibbonButton
+                            x:Name="AppMenuSaveAsFileButton"
+                            IconStretch="Fill"
+                            IconType="Icon"
+                            Label="Save As"
+                            SizeForm="Small">
+                                <syncfusion:RibbonButton.IconTemplate>
+                                    <DataTemplate>
+                                        <iconPacks:PackIconCodicons
+                                        Width="auto"
+                                        Height="auto"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Stretch"
+                                        Foreground="CornflowerBlue"
+                                        Kind="SaveAs" />
+                                    </DataTemplate>
+                                </syncfusion:RibbonButton.IconTemplate>
+                            </syncfusion:RibbonButton>
+                            
                             <!--  Save All Button  -->
                             <syncfusion:RibbonButton
                             x:Name="AppMenuSaveAllFileButton"
@@ -1305,6 +1345,8 @@
                                     </DataTemplate>
                                 </syncfusion:RibbonButton.IconTemplate>
                             </syncfusion:RibbonButton>
+
+                            
 
                         </syncfusion:RibbonMenuGroup>
                     </syncfusion:ApplicationMenu>
@@ -1405,6 +1447,27 @@
                                     VerticalAlignment="Stretch"
                                     Foreground="Green"
                                     Kind="Play" />
+                                </DataTemplate>
+                            </syncfusion:RibbonButton.IconTemplate>
+                        </syncfusion:RibbonButton>
+
+                        <!--  Pack Install Button  -->
+                        <syncfusion:RibbonButton
+                        x:Name="GeneralPackInstallButton"
+                        IconStretch="Fill"
+                        IconType="Icon"
+                        Label="Pack &amp; Install Project"
+                        Padding="12,0"
+                        SizeForm="Large">
+                            <syncfusion:RibbonButton.IconTemplate>
+                                <DataTemplate>
+                                    <iconPacks:PackIconCodicons
+                                    Width="auto"
+                                    Height="auto"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Stretch"
+                                    Foreground="Green"
+                                    Kind="SettingsGear" />
                                 </DataTemplate>
                             </syncfusion:RibbonButton.IconTemplate>
                         </syncfusion:RibbonButton>
@@ -1510,6 +1573,27 @@
                                     VerticalAlignment="Stretch"
                                     Foreground="CornflowerBlue"
                                     Kind="Save" />
+                                </DataTemplate>
+                            </syncfusion:RibbonButton.IconTemplate>
+                        </syncfusion:RibbonButton>
+
+                        <!--  Save As Button  -->
+                        <syncfusion:RibbonButton
+                            x:Name="GeneralSaveAsButton"
+                            IconStretch="Fill"
+                            IconType="Icon"
+                            Label="Save As"
+                            Padding="12,0"
+                            SizeForm="Large">
+                            <syncfusion:RibbonButton.IconTemplate>
+                                <DataTemplate>
+                                    <iconPacks:PackIconCodicons
+                                        Width="auto"
+                                        Height="auto"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Stretch"
+                                        Foreground="CornflowerBlue"
+                                        Kind="SaveAs" />
                                 </DataTemplate>
                             </syncfusion:RibbonButton.IconTemplate>
                         </syncfusion:RibbonButton>
