--- a/WolvenKit/Views/Tools/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Tools/AssetBrowserView.xaml
@@ -424,7 +424,9 @@
             BorderThickness="0"
             Visibility="{Binding Path=LoadVisibility, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
             <Grid>
-                <syncfusion:SfBusyIndicator AnimationType="Ball" Foreground="{DynamicResource MahApps.Brushes.Accent}" />
+                <syncfusion:SfBusyIndicator
+                    AnimationType="Ball" Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                    Visibility="{Binding Path=LoadVisibility, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <StackPanel VerticalAlignment="Center">
                     <TextBlock
