--- a/WolvenKit/Views/Documents/RDTWidgetView.xaml
+++ b/WolvenKit/Views/Documents/RDTWidgetView.xaml
@@ -58,5 +58,11 @@
                 <Canvas x:Name="WidgetPreview" RenderTransformOrigin="0.5,0.5" />
             </Border>
         </Border>
+        <TextBlock
+            x:Name="ZoomText"
+            Margin="4,4"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Text="100%" />
     </Grid>
 </reactiveUi:ReactiveUserControl>
